--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,10 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/dbal": "^3",
+        "doctrine/doctrine-bundle": "^2.11",
+        "doctrine/doctrine-migrations-bundle": "^3.3",
+        "doctrine/orm": "^3.1",
         "symfony/console": "6.2.*",
         "symfony/dotenv": "6.2.*",
         "symfony/flex": "^2",
@@ -15,6 +19,7 @@
         "symfony/yaml": "6.2.*"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.50"
     },
     "config": {
         "allow-plugins": {
